--- a/style.css
+++ b/style.css
@@ -146,6 +146,65 @@ a:hover{
     margin: 0px 10px 10px 0;
 }
 
+.latest_heading{
+    color:gray;
+    font-weight:bold;
+}
+.latest_items {
+    border-bottom:1px solid #E6E6E6;
+    padding-bottom:5px;
+}
+.latest_items h6{
+    font-weight:bold;
+    font-size:14px;
+}
+.latest_items img{
+    width:100%;
+}
+
+.signup img{
+    width:30px;
+    float:left;
+    margin: 0 10px 10px 0;
+}
+
+.signup {
+    padding:10px;
+    background:#F4F5F6;
+    border:1px solid #E6E6E6;
+    margin-top:20px;
+}
+
+.signup h4{
+    font-size:20px;
+    color:white;
+    background:gray;
+    padding:5px;
+    width:150px;
+}
+.signup p{
+    font-weight:bold;
+}
+
+.signup h4:hover{
+    cursor: pointer;
+    background:#999999;
+
+}
+
+.magazine{
+    margin-top:50px;
+}
+
+.mag_heading{
+    margin-bottom:10px;
+    padding: 10px 0;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+
 .opinion_items h6, .opinion_items h5{
     font-size:13px;
     font-weight:bold;
