--- a/style.css
+++ b/style.css
@@ -217,3 +217,42 @@ a:hover{
 .opinion_items h5{
     color:gray;
 }
+
+.crisis img{
+    width:100%;
+   }
+   
+   .crisis h4{
+    background:#E6E6E6;
+    padding: 12px 10px;
+    font-size:20px;
+    font-weight:bold;
+    margin-bottom: 20px;
+   
+   }
+   
+   .crisis h4:hover{
+       background:lightgray;
+       cursor: pointer;
+   }
+   
+   .mag{
+       margin:0 0 10px 0;
+   }
+   .mag img{
+       width:100%;
+       height:250px;
+   }
+   
+   .mag h5{
+       font-size:15px;
+       font-weight:bold;
+       margin-top:-10px;
+   }
+   
+   .mag h5:hover{
+       text-decoration: underline;
+       text-decoration-color: #F72210;
+       cursor: pointer;
+   }
+   
